# DD2434-advanced-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
demo/: data.ipynb  lda.ipynb
experiments/: __init__.py  classification.ipynb  lda
experiments/classification/: __init__.py  __main__.py  classification.ipynb  classification.py  utils.py
experiments/classification/data/: earn_labels.npy  grain_labels.npy
experiments/data/classification/: earn_labels.npy  grain_labels.npy
experiments/perplexity/: __main__.py  utils.py
explore/: lda_reuters.ipynb  lda_reuters.py  lower_bound_debug.ipynb  reuters.ipynb  spacy.ipynb
lda/: __init__.py  utils.py
lda/data/: __init__.py  corpus.py  data.py  document.py  nlp.py  paths.py  reuters.py  word.py
lda/data/process/: README.md  reuters.py
lda/experiments/classification/: __main__.py  classification.py  utils.py
lda/experiments/perplexity/: __main__.py
lda/variational/: __init__.py  constants.py  e_step.py  lda.py  m_step.py
lda/variational/m_step/: __init__.py  alpha_update.py  beta_update.py  m_step.py
test/: test_data.py  test_utils.py
test/data/: test_corpus.py  test_document.py  test_reuters.py
test/experiments/classification/: test_classification.py  test_classification_utils.py
test/variational/: test_e_step.py  test_lda.py  test_m_step.py  utils.py
