[tool.poetry]
name = "lda"
version = "0.1.0"
description = "Final project for Advanced Machine Learning @ KTH."
authors = []

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
