[tool.poetry]
name = "lda"
version = "0.1.0"
description = "Final project for Advanced Machine Learning @ KTH."
authors = []

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
beautifulsoup4 = "^4.9.3"
spacy = "^2.3.5"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"
scipy = "^1.5.4"
termcolor = "^1.1.0"
[tool.poetry.dependencies.en_core_web_md]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
rope = "^0.18.0"
pytest = "^6.2.1"
jupyter = "^1.0.0"
tqdm = "^4.54.1"
matplotlib = "^3.3.3"
plotly = "^4.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
